# Dima_Plugin_Chrdmachine

./: .continue-here.md  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build-and-install.ps1  build-context.ps1  build-release.bat  build31.ps1  build32.ps1  build_check.ps1  build_output.txt  check-install.ps1  check-installed.ps1  check-lock.ps1  check_dll_context.ps1  check_dll_strings.ps1  check_dll_unicode.ps1  check_generated.ps1  check_manufacturer.ps1  check_vst3_manufacturer.ps1  cj-install.ps1  cleanup-vst.ps1  cleanup-vst3.ps1  copy-vst.bat  copy-warp-vst.bat  del-localvst.ps1  del-vst-copies.ps1  deploy-vst.ps1  do-install.ps1  do-reinstall.ps1  find-lock.ps1  fix-install.ps1  fix-local-vst.ps1  install-beta.ps1  kill-and-install.ps1  reinstall-vst.ps1  update-local-vst3.ps1
.planning/: .continue-here.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  todos.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: .continue-here.md  ableton-freeze-audio-init.md  two-instance-crash-and-track-type.md
.planning/milestones/: v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.7-REQUIREMENTS.md  v1.7-ROADMAP.md  v1.8-ROADMAP.md
.planning/phases/01-build-foundation-and-juce-version-lock/: 01-02-SUMMARY.md
.planning/phases/01-project-setup/: 01-01-SUMMARY.md  01-RESEARCH.md
.planning/phases/04-per-voice-trigger-sources-and-random-gate/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/phases/05-looperengine-hardening-and-daw-sync/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md
.planning/phases/06-sdl2-gamepad-integration/: .continue-here.md
.planning/phases/07-daw-compatibility-distribution-and-release/: .continue-here.md  07-01-SUMMARY.md
.planning/phases/08-post-v1.0-patch-verification/: 08-01-PLAN.md  08-02-PLAN.md  08-RESEARCH.md
.planning/phases/09-midi-panic-and-mute-feedback/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-VERIFICATION.md
.planning/phases/10-trigger-quantization-infrastructure/: 10-01-PLAN.md  10-02-PLAN.md  10-03-PLAN.md  10-03-SUMMARY.md  10-04-PLAN.md  10-04-SUMMARY.md  10-05-PLAN.md  10-CONTEXT.md
.planning/phases/11-ui-polish-and-installer/: 11-01-SUMMARY.md  11-RESEARCH.md
.planning/phases/12-lfo-engine-core/: 12-01-PLAN.md  12-02-PLAN.md
.planning/phases/13-processblock-integration-and-apvts/: 13-01-PLAN.md  13-CONTEXT.md  13-VERIFICATION.md
.planning/phases/14-lfo-ui-and-beat-clock/: 14-01-SUMMARY.md  14-02-SUMMARY.md  14-03-SUMMARY.md  14-RESEARCH.md
.planning/phases/15-gamepad-preset-control/: 15-01-PLAN.md  15-01-SUMMARY.md  15-02-PLAN.md  15-CONTEXT.md  15-VERIFICATION.md
.planning/phases/16-distribution/: 16-01-PLAN.md  16-01-SUMMARY.md  16-02-PLAN.md  16-02-SUMMARY.md
.planning/phases/17-bug-fixes/: 17-03-SUMMARY.md  17-CONTEXT.md  17-RESEARCH.md  17-VERIFICATION.md
.planning/phases/18-single-channel-routing/: .continue-here.md  18-01-PLAN.md  18-02-PLAN.md  18-03-PLAN.md  18-RESEARCH.md
.planning/phases/19-sub-octave-per-voice/: 19-01-PLAN.md  19-01-SUMMARY.md  19-02-PLAN.md  19-02-SUMMARY.md  19-RESEARCH.md  19-VERIFICATION.md
.planning/phases/20-random-trigger-system-extensions/: .continue-here.md  20-02-SUMMARY.md  20-03-SUMMARY.md  20-CONTEXT.md  20-RESEARCH.md
.planning/phases/21-left-joystick-modulation-expansion/: 21-01-SUMMARY.md  21-02-SUMMARY.md  21-CONTEXT.md
.planning/phases/22-lfo-recording/: 22-01-PLAN.md  22-02-PLAN.md  22-03-PLAN.md  22-03-SUMMARY.md
.planning/phases/23-arpeggiator/: 23-01-PLAN.md  23-02-PLAN.md  23-CONTEXT.md  23-RESEARCH.md
.planning/phases/24-gamepad-option-mode-1/: 24-CONTEXT.md
.planning/phases/24.1-lfo-joystick-visual-tracking-and-center-offset/: 24.1-01-SUMMARY.md  24.1-RESEARCH.md
.planning/phases/25-distribution/: 25-01-SUMMARY.md  25-02-SUMMARY.md  25-VERIFICATION.md
.planning/phases/26-defaults-and-bug-fix/: 26-01-SUMMARY.md  26-RESEARCH.md
.planning/phases/27-triplet-subdivisions/: 27-RESEARCH.md
.planning/phases/28-random-free-redesign/: 28-01-SUMMARY.md
.planning/phases/29-looper-perimeter-bar/: 29-01-PLAN.md  29-01-SUMMARY.md  29-CONTEXT.md  29-RESEARCH.md
.planning/phases/30-distribution/: 30-01-PLAN.md  30-01-SUMMARY.md  30-02-PLAN.md  30-CONTEXT.md  30-RESEARCH.md
.planning/phases/31-paint-only-visual-foundation/: 31-01-PLAN.md  31-01-SUMMARY.md  31-02-PLAN.md  31-02-SUMMARY.md  31-RESEARCH.md
.planning/phases/33-version-sync/: .continue-here.md  33-01-PLAN.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Source/: ChordEngine.h  ChordJoystick_resources.rc.in  ChordNameHelper.h  CustomCcRoutingHelpers.h  GamepadInput.cpp  GamepadInput.h  LfoEngine.cpp  LfoEngine.h  LooperEngine.cpp  LooperEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SdlContext.cpp  SdlContext.h  TriggerSystem.cpp  TriggerSystem.h
Tests/: ChordEngineTests.cpp  ChordNameTests.cpp  CustomCcRoutingTests.cpp  LfoEngineTests.cpp  LfoSisterAttenTests.cpp  LooperEngineTests.cpp
installer/: DimaChordJoystick-Setup.iss  DimaChordJoystick-Setup.iss.in
installer/Output/: release-notes-v1.4.md  release-notes-v1.5.md
manual/: ChordJoystick-Manual.html
(+60 files in other folders)
